--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@number-flow/react": "^0.5.5",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -44,6 +45,7 @@
     "cryptocurrency-icons": "^0.18.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.4.7",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "next": "14.2.16",
